--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,313 +1,11 @@
-img {
-  width: 100%;
-}
-
-.img-1 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-1 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-1 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-1 {
-    width: 21%;
-  }
-}
-
-.img-2 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-2 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-2 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-2 {
-    width: 21%;
-  }
-}
-
-.img-3 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-3 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-3 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-3 {
-    width: 21%;
-  }
-}
-
-.img-4 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-4 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-4 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-4 {
-    width: 21%;
-  }
-}
-
-.img-5 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-5 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-5 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-5 {
-    width: 21%;
-  }
-}
-
-.img-6 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-6 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-6 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-6 {
-    width: 21%;
-  }
-}
-
-.img-7 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-7 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-7 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-7 {
-    width: 21%;
-  }
-}
-
-.img-8 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-8 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-8 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-8 {
-    width: 21%;
-  }
-}
-
-.img-9 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-9 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-9 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-9 {
-    width: 21%;
-  }
-}
-
-.img-10 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-10 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-10 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-10 {
-    width: 21%;
-  }
-}
-
-.img-11 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-11 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-11 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-11 {
-    width: 21%;
-  }
-}
-
-.img-12 {
-  text-align: center;
-  margin: auto;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 85%;
-}
-@media (min-width: 480px) {
-  .img-12 {
-    width: 38%;
-  }
-}
-@media (min-width: 720px) {
-  .img-12 {
-    width: 28%;
-  }
-}
-@media (min-width: 1100px) {
-  .img-12 {
-    width: 21%;
-  }
-}
-
-.lb-data .lb-caption {
-  font-size: 20px;
-}
-
-.main-wrapper {
-  width: 80%;
-  margin: auto;
-}
-
-.images-containter {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  text-align: center;
-  margin: auto;
-}
-
-h1 {
-  text-align: center;
-  margin: auto;
-  margin-top: 50px;
-  margin-bottom: 30px;
-}
-
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: "Gaegu", cursive;
+  text-align: center;
+  margin: auto;
 }
 
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
@@ -640,6 +338,335 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+img {
+  width: 100%;
+}
+
+.img-1 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-1 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-1 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-1 {
+    width: 21%;
+  }
+}
+
+.img-2 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-2 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-2 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-2 {
+    width: 21%;
+  }
+}
+
+.img-3 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-3 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-3 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-3 {
+    width: 21%;
+  }
+}
+
+.img-4 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-4 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-4 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-4 {
+    width: 21%;
+  }
+}
+
+.img-5 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-5 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-5 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-5 {
+    width: 21%;
+  }
+}
+
+.img-6 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-6 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-6 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-6 {
+    width: 21%;
+  }
+}
+
+.img-7 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-7 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-7 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-7 {
+    width: 21%;
+  }
+}
+
+.img-8 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-8 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-8 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-8 {
+    width: 21%;
+  }
+}
+
+.img-9 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-9 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-9 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-9 {
+    width: 21%;
+  }
+}
+
+.img-10 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-10 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-10 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-10 {
+    width: 21%;
+  }
+}
+
+.img-11 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-11 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-11 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-11 {
+    width: 21%;
+  }
+}
+
+.img-12 {
+  text-align: center;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 85%;
+}
+@media (min-width: 480px) {
+  .img-12 {
+    width: 38%;
+  }
+}
+@media (min-width: 720px) {
+  .img-12 {
+    width: 28%;
+  }
+}
+@media (min-width: 1100px) {
+  .img-12 {
+    width: 21%;
+  }
+}
+
+.lb-data .lb-caption {
+  font-size: 20px;
+}
+
+.main-wrapper {
+  width: 80%;
+  margin: auto;
+}
+
+.images-containter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+  margin: auto;
+}
+
+.search {
+  text-align: center;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+input {
+  width: 50%;
+  margin: auto;
+  padding-left: 10px;
+  border: grey 2px solid;
+  border-radius: 3px;
+  height: 40px;
+}
+
+h1 {
+  text-align: center;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 40px;
+}
+
+.secondary {
+  margin-right: 30px;
+  font-weight: bold;
+}
+
+.sub {
+  margin-bottom: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
