--- a/SCSS/components/_search.scss
+++ b/SCSS/components/_search.scss
@@ -5,9 +5,18 @@
 }
 
 input {
-  @include inset-block(50%);
+  @include inset-block(40%);
   padding-left: 10px;
   border: grey 2px solid;
   border-radius: 3px;
   height: 40px;
+}
+
+button {
+  border: black 1px solid;
+  border-radius: 3px;
+  background-color: lightgrey;
+  height: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
